# ChangeLog for x11-misc/xbitmaps
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-misc/xbitmaps/ChangeLog,v 1.23 2006/07/19 09:38:22 gmsoft Exp $

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> xbitmaps-1.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> xbitmaps-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xbitmaps-1.0.1.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> xbitmaps-1.0.1.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> xbitmaps-1.0.1.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xbitmaps-1.0.1.ebuild:
  x86 stable.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> xbitmaps-1.0.1.ebuild:
  Add ~x86-fbsd keyword.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> xbitmaps-1.0.1.ebuild:
  Mark 1.0.1 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> xbitmaps-1.0.1.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org> xbitmaps-1.0.1.ebuild:
  Unstable on hppa.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -xbitmaps-0.99.1.ebuild, -xbitmaps-1.0.0.ebuild:
  Pull old versions.

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org> xbitmaps-1.0.1.ebuild:
  Marked ~alpha

*xbitmaps-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xbitmaps-1.0.1.ebuild:
  Bump for 7.0.

*xbitmaps-1.0.0 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xbitmaps-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -xbitmaps-0.99.0.ebuild:
  Pull old versions.

*xbitmaps-0.99.1 (20 Oct 2005)

  20 Oct 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xbitmaps-0.99.1.ebuild:
  Bump for 7.0 RC1.
