@@ -1,17 +1,18 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-misc/xbitmaps/xbitmaps-1.0.1.ebuild,v 1.13 2006/09/10 08:46:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbitmaps/xbitmaps-1.0.1.ebuild,v 1.14 2008/05/28 01:35:18 dberkholz Exp $
 
 EAPI="prefix"
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
 
+MODULE="data"
 inherit x-modular
 
 DESCRIPTION="X.Org bitmaps data"
 
-KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
 
 RDEPEND=""
 DEPEND="${RDEPEND}"
