@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xbitmaps
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-misc/xbitmaps/ChangeLog,v 1.23 2006/07/19 09:38:22 gmsoft Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbitmaps/ChangeLog,v 1.24 2008/05/28 01:35:18 dberkholz Exp $
+
+  28 May 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  xbitmaps-1.0.1.ebuild:
+  Manually specify module to download from, so we can simplify the eclass.
 
   19 Jul 2006; Guy Martin <gmsoft@gentoo.org> xbitmaps-1.0.1.ebuild:
   Stable on hppa.
